--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.7.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
